--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "echarts": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "highlight.js": "^10.0.3",
-    "impetus": "^0.8.8",
-    "mescroll.js": "^1.4.1"
+    "impetus": "^0.8.8"
   }
 }
